--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,9 @@ example:
   property: comentarios!
 signing:
   key: 1234
+opentracing:
+  jaeger:
+    udp-sender:
+      host: 192.168.99.100
+      port: 5775
 
