--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,9 @@ example:
   property: comentarios!
 signing:
   key: 1234
+redis:
+  server: 192.168.99.100
+  port: 6379  
 opentracing:
   jaeger:
     udp-sender:
